--- a/resources.qmd
+++ b/resources.qmd
@@ -2,6 +2,11 @@
 title: "Resources and tools about R"
 ---
 
+## Papers and packages mentioned in lectures
+
+- [Tidy data, Hadley Wickham, 2014, JSS](wickham-tidy-data-2014-jssv59i10.pdf)
+
+
 ## Cheatsheets
 
 Long list of cheatsheets: 
