--- a/lectures/tidy-data.qmd
+++ b/lectures/tidy-data.qmd
@@ -262,6 +262,6 @@ readRDS(here("lpr-ex.rds")) |> head(12)
 
 We will practice creating tidy data continuing with our mean sd function, and using the register data example to practice pivoting and doing grouped analyses.
 
-[Link to lesson](../lessons/tidy-data.html)
+[Link to lesson](../lessons/merge-and-reshape.html)
 
 [Link home](../index.html)
