--- a/resources.qmd
+++ b/resources.qmd
@@ -2,6 +2,10 @@
 title: "Resources and tools about R"
 ---
 
+## Data used in lessons
+
+[Data](data/index.html)
+
 ## Papers and packages mentioned in lectures
 
 - [Tidy data, Hadley Wickham, 2014, JSS](wickham-tidy-data-2014-jssv59i10.pdf)
