--- a/lectures/projects.qmd
+++ b/lectures/projects.qmd
@@ -103,7 +103,7 @@ Compose directories and files with `file.path` (it is safe and works in any OS)
 #| eval=FALSE,
 #| echo=TRUE
 read.csv(file.path("..", "rawdata", "lisa-2012-full.csv"))
-write.csv(analysis_file, file.path("..", "data", "analysis-data.rds"))
+saveRDS(analysis_file, file.path("..", "data", "analysis-data.rds"))
 ```
 
 ## The `here` package
@@ -115,7 +115,7 @@ write.csv(analysis_file, file.path("..", "data", "analysis-data.rds"))
 library(here)
 
 read.csv(here("rawdata", "lisa-2012-full.csv"))
-write.csv(analysis_file, here("data", "analysis-data.rds"))
+saveRDS(analysis_file, here("data", "analysis-data.rds"))
 ```
 
 The first line figures out the root of your project directory: is there an `.Rproj` or `.here` file there? 
