--- a/exercises/projects.qmd
+++ b/exercises/projects.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Project organization and workflow -- exercises"
-subtitle: "Day 1, A"
+subtitle: "Day 0"
 author: Michael C Sachs
 description: "Understanding how R deals with the current working directory, practice using relative paths in R input and output, and testing out the `here` package for managing file paths in a project"
 image: projects.jpeg
